correct header wrap

--- a/Angular/src/app/shared/bia-shared/components/layout/classic-header/classic-header.component.scss
+++ b/Angular/src/app/shared/bia-shared/components/layout/classic-header/classic-header.component.scss
@@ -170,9 +170,9 @@ bia-notification-team-warning {
     }
   }
   p-megamenu {
-    margin-left: -12px;
     .p-megamenu {
-      padding: 0;
+      padding-bottom: 0;
+      padding-top: 0;
     }
 
     .p-state-active {
